--- a/HaloOnline.Server/packages.config
+++ b/HaloOnline.Server/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Jwt" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.96.0" targetFramework="net45" />
